- Fixed FastCGI IIS document root problem. (Shane)
- Fixed corruption of multibyte character including 0x5c as second
  byte in multipart/form-data. (Rui)
- Fixed possible crash in imagerotate() when an invalid color index
  is used for background color. (Pierre-Alain Joye)
- Fixed bug #24640 (var_export and var_dump can't output large float). (Marcus)
- Fixed bug #24573 (debug_backtrace() crashes if $this set to null). (Jani)
- Fixed bug #24560 (parse_url() incorrectly handling certain file:// based 
  schemas). (Ilia)
- Fixed bug #24537 (apache2 compile misses some include directories). (Jani)
- Fixed bug #24519 (aggregate_methods_by_list() does not increment refcount).
- Fixed bug #24313 (file_exist() warning on non-existent files when
  open_basedir is used). (Ilia)
- Fixed bug #24312 (base64_decode() does not skip 0xF0-0xFF characters).
  (gereon.steffens[at]onvista.de, Ilia)
- Fixed bug #24284 (Fixed memory leak inside pg_ping()). (Ilia)
- Fixed bug #24249 (fdf_add_doc_javascript() not available on Windows). (Edin)
- Fixed bug #24063 (scientific notation broken in *printf()). (Ilia)
- Fixed bug #24028 (Reading raw post message by php://input failed). (Jani)
- Fixed bug #24009 (FastCGI handling of file not found). (Shane)
- Fixed bug #23808 (broken imagecopymerge()). (Pierre-Alain Joye)
- Fixed bug #23792 (imagerotate() problems with limited platte, the function
  will always return true color image from now on). (Pierre-Alain Joye)
- Fixed bug #23664 (FastCGI socket listenting). (Shane)
- Fixed bug #22690 (ob_start() did not work with create_function() callbacks).
  (Marcus)
- Fixed bug #23685 (fake values returned when OID value is an empty string).
  (Jani)
- Fixed bug #21855 (Threading issue on HP-UX). (Roshan Naik, Andi, Moriyoshi)
- Fixed bug #21074 (Apache2: "ErrorDocument xxx /error.php" broken). (Jani)
- Fixed bug #11924 (ibase_query(), ibase_execute() mangled passed parameters).
  (Jani)
  
19 Jun 2003, Version 4.3.3RC1